# neural-network

./: .gitmodules  CMakeLists.txt  README.md
part1/: CMakeLists.txt
part1/src/: application.cpp  neuron.hpp
part2/: CMakeLists.txt
part2/src/: application.cpp  application.hpp  helpers.hpp  network.cpp  network.hpp  ui.cpp  ui.hpp
part3/: CMakeLists.txt
part3/data/: Qualitative_Bankruptcy.info.txt
part3/src/: application.cpp  application.hpp  helpers.cpp  helpers.hpp  learn.cpp  learn.hpp  main.cpp  network.cpp  network.hpp  ui.cpp  ui.hpp
part3b/: CMakeLists.txt
part3b/data/: american_bankruptcy_filtered.csv  filter.py
part3b/src/: application.cpp  application.hpp  helpers.cpp  helpers.hpp  learn.hpp  main.cpp  ui.cpp  ui.hpp
src/: application.cpp  application.hpp  neuron.hpp
